<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="detail"
            type="com.example.arsivuygulamasi.Post" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".DetayFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp" />

        <ImageView
            android:id="@+id/detayImageView"
            android:layout_width="330dp"
            android:layout_height="186dp"
            android:layout_marginTop="28dp"
            android:onClick="gorselSec"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:srcCompat="@drawable/adsz"
            tools:ignore="ContentDescription,MissingConstraints" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="330dp"
            android:layout_height="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/gezilen_yer"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detayImageView" />

        <EditText
            android:id="@+id/gezilen_yer_detay_isim_edit_text"
            android:layout_width="330dp"
            android:layout_height="43dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@{detail.gezilenYer}"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:ignore="Autofill,MissingConstraints" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="330dp"
            android:layout_height="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/a_klama"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gezilen_yer_detay_isim_edit_text" />

        <EditText
            android:id="@+id/gezilen_yer_detay_aciklama"
            android:layout_width="332dp"
            android:layout_height="110dp"
            android:layout_marginTop="12dp"
            android:inputType="text"
            android:text="@{detail.kullaniciYorum}"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/gezilen_yer_detay_guncelle_buton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buton"
            android:text="@string/guncelle"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gezilem_yer_detay_konum_text"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="330dp"
            android:layout_height="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/konum"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gezilen_yer_detay_aciklama" />

        <EditText
            android:id="@+id/gezilem_yer_detay_konum_text"
            android:layout_width="330dp"
            android:layout_height="110dp"
            android:layout_marginTop="12dp"
            android:inputType="textUri"
            android:text="@{detail.konum}"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="TextViewEdits" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>